# hs-web-models

./: .gitignore  CHANGELOG.md  README.md  jolharg-web-models.cabal
lib/Data/Model/: User.hs
lib/Types/: User.hs
lib/Types/Instances/: User.hs
test/: Spec.hs
