cabal-version:       3.0
name:                jolharg-web-models
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:    Data.Model.User
                    , Types.User
                    , Types.Instances.User
 -- other-extensions:
  build-depends:      base >= 4.12 && < 5
                    , jolharg-models
                    , jolharg-web-types
                    -- for servant-reflex compatibility
                    -- , servant-auth >= 0.2.1 && < 0.4 
                    , servant-auth >= 0.4
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, NoGeneralisedNewtypeDeriving, ImportQualifiedPost, OverloadedStrings, UnicodeSyntax
  if impl(ghcjs)
    ghc-options:      -Wall -Werror
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
                      -Wno-missing-safe-haskell-mode
  else
    ghc-options:      -Wall -Werror
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
                      -Wno-missing-safe-haskell-mode
                      -Wno-missing-kind-signatures

test-suite jolharg-web-models-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, NoGeneralisedNewtypeDeriving, ImportQualifiedPost, OverloadedStrings, UnicodeSyntax
  main-is:             Spec.hs
  if impl(ghcjs)
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
  else
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
                      -Wno-missing-safe-haskell-mode
                      -Wno-missing-kind-signatures
  build-depends:
    base >= 4.12 && < 5
    -- , jolharg-web-models
    , hspec
    -- , hspec-core
    -- , hspec-expectations
    -- , HUnit
    -- , QuickCheck
  -- build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    MainSpec
